refactor to user entity
