# src/controllers/auth/index.js
@@ -2,7 +2,7 @@ require('dotenv').config()
 const HttpResponse = require('../../helpers/http-response')
 const Encripter = require('../../helpers/encrypter')
 const TokenHelper = require('../../helpers/token-helper')
-const User = require('../../database/models/User')
+const User = require('../../service/User')
 
 class AuthRouter {
   async auth (email, password) {
@@ -13,12 +13,13 @@ class AuthRouter {
       return HttpResponse.badRequest('password')
     }
     const usr = new User()
-    const user = await usr.getUserByEmail(email)
+    const result = await usr.getUserByEmail(email)
+
     const encripter = new Encripter()
-    const isValid = user && (await encripter.compare(password, user.password))
+    const isValid = result.data && (await encripter.compare(password, result.data.password))
     if (isValid) {
       const tokenHelper = new TokenHelper(process.env.TOKEN_SECRET)
-      const accessToken = await tokenHelper.generate(user._id)
+      const accessToken = await tokenHelper.generate(result.data.id)
       return HttpResponse.ok({ accessToken: accessToken })
     }
     return HttpResponse.unauthorized('user unauthorized.')
